tests/snapshots/snapshot__scroll_region_confines_scrolling.snap
---
source: tests/snapshot.rs
expression: "frame(4, 4, b\"top\\x1b[2;3r\\x1b[2H1\\r\\n2\\r\\n3\\r\\n4\")"
---
[
  {
    "t": "default_colors",
    "fg": 13684944,
    "bg": 0,
    "sp": 13684944
  },
  {
    "t": "grid_clear"
  },
  {
    "t": "grid_line",
    "row": 0,
    "col": 0,
    "cells": [
      [
        "t",
        0
      ],
      [
        "o"
      ],
      [
        "p"
      ],
      [
        " "
      ]
    ]
  },
  {
    "t": "grid_line",
    "row": 1,
    "col": 0,
    "cells": [
      [
        "3",
        0
      ],
      [
        " ",
        0,
        3
      ]
    ]
  },
  {
    "t": "grid_line",
    "row": 2,
    "col": 0,
    "cells": [
      [
        "4",
        0
      ],
      [
        " ",
        0,
        3
      ]
    ]
  },
  {
    "t": "grid_line",
    "row": 3,
    "col": 0,
    "cells": [
      [
        " ",
        0,
        4
      ]
    ]
  },
  {
    "t": "cursor",
    "row": 2,
    "col": 1,
    "visible": true,
    "shape": "block"
  },
  {
    "t": "mode",
    "alt_screen": false
  },
  {
    "t": "flush"
  }
]
