tests/snapshots/snapshot__skin_tone_modifier_is_a_separate_cell.snap
---
source: tests/snapshot.rs
expression: "frame(8, 1, \"👍\\u{1f3fd}\".as_bytes())"
---
[
  {
    "t": "default_colors",
    "fg": 13684944,
    "bg": 0,
    "sp": 13684944
  },
  {
    "t": "grid_clear"
  },
  {
    "t": "grid_line",
    "row": 0,
    "col": 0,
    "cells": [
      [
        "👍",
        0
      ],
      [
        ""
      ],
      [
        "🏽"
      ],
      [
        ""
      ],
      [
        " ",
        0,
        4
      ]
    ]
  },
  {
    "t": "cursor",
    "row": 0,
    "col": 4,
    "visible": true,
    "shape": "block"
  },
  {
    "t": "mode",
    "alt_screen": false
  },
  {
    "t": "flush"
  }
]
