tests/snapshots/snapshot__zwj_sequence_is_not_recombined.snap
---
source: tests/snapshot.rs
expression: "frame(10, 1, \"👨\\u{200d}👩\\u{200d}👧\".as_bytes())"
---
[
  {
    "t": "default_colors",
    "fg": 13684944,
    "bg": 0,
    "sp": 13684944
  },
  {
    "t": "grid_clear"
  },
  {
    "t": "grid_line",
    "row": 0,
    "col": 0,
    "cells": [
      [
        "👨‍",
        0
      ],
      [
        ""
      ],
      [
        "👩‍"
      ],
      [
        ""
      ],
      [
        "👧"
      ],
      [
        ""
      ],
      [
        " ",
        0,
        4
      ]
    ]
  },
  {
    "t": "cursor",
    "row": 0,
    "col": 6,
    "visible": true,
    "shape": "block"
  },
  {
    "t": "mode",
    "alt_screen": false
  },
  {
    "t": "flush"
  }
]
